--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
 <h1>Cloud Computing : The Data Of The Future?</h1>
+<br>
 <h2>Cloud computing is a branch of data storage that saves data over the internet, and 
-    can be acsessed from anywhere
+    can be accessed from anywhere. This allows for data to be used better, and more easily. 
 </h2>
 </body>
 </html>
