--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     </title>
 </head>
 <body>
+<head>
 <h1>Cloud Computing : The Data Of The Future?</h1>
 <br>
-<h2>Cloud computing is a branch of data storage that saves data over the internet, and 
+<h4>Cloud computing is a branch of data storage that saves data over the internet, and 
     can be accessed from anywhere. This allows for data to be used better, and more easily. 
-</h2>
+</h4>
+</head>
 </body>
 </html>
