--- a/index.html
+++ b/index.html
@@ -7,12 +7,18 @@
     </title>
 </head>
 <body>
-<head>
+    <nav>
+    <a href=""></a>
+    </nav>
+<main>
 <h1>Cloud Computing : The Data Of The Future?</h1>
 <br>
 <h4>Cloud computing is a branch of data storage that saves data over the internet, and 
     can be accessed from anywhere. This allows for data to be used better, and more easily. 
 </h4>
-</head>
+</main>
+<footer>
+    
+</footer>
 </body>
 </html>
