--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <nav>
-    <a href=""></a>
+    <a href="index.html">Home</a>
+    <a href="overview.html">Overview</a>
+    <a href="current.html">Current Uses</a>
+    <a href="effect.html">Effects</a>
+    <a href="contact.html">Contact</a>
     </nav>
 <main>
 <h1>Cloud Computing : The Data Of The Future?</h1>
@@ -16,9 +20,13 @@
 <h4>Cloud computing is a branch of data storage that saves data over the internet, and 
     can be accessed from anywhere. This allows for data to be used better, and more easily. 
 </h4>
+<p>
+
+</p>
+<h4></h4>
 </main>
 <footer>
-    
+
 </footer>
 </body>
 </html>
