--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
     <a href="index.html">Home</a>
-    <a href="overview.html">Overview</a>
+    <a href="overview.html">Overview of Technology</a>
     <a href="current.html">Current Uses</a>
     <a href="effect.html">Effects</a>
     <a href="contact.html">Contact</a>
@@ -21,7 +21,7 @@
     can be accessed from anywhere. This allows for data to be used better, and more easily. 
 </h4>
 <p>
-
+This technology, which is being developed in a large mass 
 </p>
 <h4></h4>
 </main>
