--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Title</h1>
     <nav>
     <a href="index.html">Home</a>
     <a href="overview.html">Overview of Technology</a>
