--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+<header>
     <h1>Title</h1>
+</header>
     <nav>
     <a href="index.html">Home</a>
     <a href="overview.html">Overview of Technology</a>
