--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     </title>
 </head>
 <body>
+<header>
     <h1>Cloud Computing : The Data Of The Future?</h1>
+</header>
     <nav>
     <a href="index.html">Home</a>
     <a href="overview.html">Overview of Technology</a>
