--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     can be accessed from anywhere. This allows for data to be used better, and more easily. 
 </h4>
 <p>
-This technology, which is being developed in a large mass 
+This technology, which is being developed in a large mass by big companies like microsoft and apple, is slowly icnreasing
+the usage of cloud, which allows for more usage of data across locatiosn without having to bring your storage drives everywhere,
+and costing a few dollars a month to store a lot of data.
 </p>
 <h4></h4>
 </main>
