--- a/current.html
+++ b/current.html
@@ -18,6 +18,7 @@
     <a href="contact.html">Contact</a>
     </nav>
     <main></main>
+    <img src="What-is-Cloud-Computing.jpeg" alt="what is cloud computing">
     <footer></footer>
 </body>
 </html>
