--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ This technology, which is being developed in a large mass by big companies like 
 the usage of cloud, which allows for more usage of data across locatiosn without having to bring your storage drives everywhere,
 and costing a few dollars a month to store a lot of data.
 </p>
+<img src="download.jpg" alt="cloud computing">
 <h4></h4>
 </main>
 <footer>
