--- a/current.html
+++ b/current.html
@@ -18,7 +18,7 @@
     <a href="contact.html">Contact</a>
     </nav>
     <main></main>
-    <img src="What-is-Cloud-Computing.jpeg" alt="what is cloud computing">
+    <img src="What-is-Cloud-Computing.jpeg" alt="what is cloud computing" height="100"width="100">
     <footer></footer>
 </body>
 </html>
