--- a/overview.html
+++ b/overview.html
@@ -18,7 +18,11 @@
     <a href="contact.html">Contact</a>
     </nav>
     <main>
-        <p>Technology is used in all </p>
+        <p>Technology shapes how we connect, work, and solve problems. 
+            Smartphones keep us linked, AI drives innovation, and renewable energy supports
+             a greener future. As it grows, issues like privacy and job changes need care to ensure positive progress.
+            </p>
+            
     </main>
     <footer></footer>
 </body>
