--- a/overview.html
+++ b/overview.html
@@ -19,7 +19,7 @@
     </nav>
     <main>
         <p>Technology shapes how we connect, work, and solve problems. 
-            Smartphones keep us linked, AI drives innovation, and renewable energy supports
+            Smartphones keep us connected, AI drives innovation, and renewable energy supports
              a greener future. As it grows, issues like privacy and job changes need care to ensure positive progress.
             </p>
             <img src="types-of-technology-2.webp" alt="technology!">
