--- a/current.html
+++ b/current.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header>
-    <h1>Title</h1>
+    <h1>Current Uses</h1>
 </header>
     <nav>
     <a href="index.html">Home</a>
@@ -17,7 +17,12 @@
     <a href="effect.html">Effects</a>
     <a href="contact.html">Contact</a>
     </nav>
-    <main></main>
+    <main> <p>
+        Cloud computing helps people and businesses store, access, and manage data online instead of on personal devices. 
+        It allows easy sharing of files, running applications, and backing up information securely. 
+        Businesses use it to analyze data, host websites, and scale their operations quickly without needing extra hardware. 
+        It is also useful for online learning, gaming, and remote work, making everyday tasks more efficient and flexible.
+    </p></main>
     <img src="What-is-Cloud-Computing.jpeg" alt="what is cloud computing" height="100"width="100">
     <footer></footer>
 </body>
