--- a/effect.html
+++ b/effect.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header>
-    <h1>Title</h1>
+    <h1>Effects</h1>
 </header>
     <nav>
     <a href="index.html">Home</a>
@@ -17,7 +17,13 @@
     <a href="effect.html">Effects</a>
     <a href="contact.html">Contact</a>
     </nav>
-    <main></main>
+    <main><p>
+        Cloud computing makes work faster and more efficient by allowing people and businesses to access data and tools online. 
+        It reduces the need for expensive hardware, lowers costs, and helps businesses grow quickly. 
+        Remote work and online learning become easier with cloud access from anywhere.
+         However, it also raises concerns about data privacy and security, as sensitive information is stored online.
+         Overall, cloud computing changes how we store, share, and use information in powerful ways.
+    </p></main>
     <footer></footer>
 </body>
 </html>
