--- a/overview.html
+++ b/overview.html
@@ -22,7 +22,7 @@
             Smartphones keep us connected, AI drives innovation, and renewable energy supports
              a greener future. As it grows, issues like privacy and job changes need care to ensure positive progress.
             </p>
-            <img src="types-of-technology-2.webp" alt="technology!">
+            <img src="types-of-technology-2.webp" alt="technology!" height="300" width="300">
     </main>
     <footer></footer>
 </body>
