--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,11 @@
     <a href="effect.html">Effects</a>
     <a href="contact.html">Contact</a>
     </nav>
-    <main></main>
+    <main>
+    <h3>
+    Contact at: <br> Alijawadparpia@gmail.com <br> 
+    </h3>
+    </main>
     <footer></footer>
 </body>
 </html>
