--- a/effect.html
+++ b/effect.html
@@ -24,6 +24,7 @@
          However, it also raises concerns about data privacy and security, as sensitive information is stored online.
          Overall, cloud computing changes how we store, share, and use information in powerful ways.
     </p></main>
+    <img src="" alt="">
     <footer></footer>
 </body>
 </html>
